# memories

./: .gitignore  LICENSE  README.md  jitpack.yml  pom.xml
.github/workflows/: build-native.yml  development.yml  sonar.yml  test.yml  unit-test.yml
LICENSES/: Apache-2.0.txt
api/: pom.xml
api/src/main/c/: Makefile  README.md  file.c  memories.c  memory.c  memory_allocator.c
api/src/main/c/include/: memories.h
api/src/main/c/jni/: Android.mk
api/src/main/java/memories/api/: FileApi.java  MappedMemoryApi.java  MemoryAllocatorApi.java  MemoryApi.java
api/src/main/resources/native/memories/jni/darwin-x86_64/: memories.jnilib
api/src/main/resources/native/memories/jni/linux-/: memories.jnilib
api/src/main/resources/native/memories/jni/linux-aarch64/: memories.jnilib
api/src/main/resources/native/memories/jni/linux-armhf/: memories.jnilib  memories.jnilib.license
api/src/main/resources/native/memories/jni/linux-armv7/: memories.jnilib  memories.jnilib.license
api/src/main/resources/native/memories/jni/linux-ppc64le/: memories.jnilib
api/src/main/resources/native/memories/jni/linux-x86/: memories.jnilib
api/src/main/resources/native/memories/jni/linux-x86_64/: memories.jnilib
api/src/main/resources/native/memories/jni/windows-x86/: memories.jnilib
api/src/main/resources/native/memories/jni/windows-x86_64/: memories.jnilib
api/src/test/java/memories/api/: MemoryAllocatorTest.java  MemoryTest.java  NegativeTest.java
benchmark/: pom.xml
benchmark/src/main/java/memories/benchmark/: Benchmark.java
benchmark/src/test/java/memories/benchmark/: Sample.java  SetAndGet.java
jdk17/: pom.xml
jdk17/src/main/java/memories/jdk17/: JDK17Memory.java  JDK17MemoryAllocator.java
jdk2/: pom.xml
jdk2/src/main/c/: Makefile  memories.c  memory.c  memory_allocator.c
jdk2/src/main/c/include/: memories.h
jdk2/src/main/java/memories/jdk2/: JDK2Memory.java  JDK2MemoryAllocator.java
jdk2/src/main/resources/native/memories/jni/darwin-x86_64/: memories.jnilib  (+2 more)
jdk2/src/test/java/memories/jdk2/: MemoryAllocatorTest.java  MemoryTest.java  NegativeTest.java
jni/: CMakeLists.txt  pom.xml
jni/src/main/c/: Makefile  memories.c  memory.c  memory_allocator.c
jni/src/main/c/include/: memories.h
jni/src/main/java/memories/jni/: JNIMemory.java  JNIMemoryAllocator.java
jni/src/main/resources/native/memories/jni/darwin-x86-64/: memories.jnilib.license  memories.jnilib.sha256sum
jni/src/main/resources/native/memories/jni/linux-x86/: memories.jnilib  memories.jnilib.sha256sum
jni/src/main/resources/native/memories/jni/linux-x86-64/: memories.jnilib  memories.jnilib.license
jni/src/main/resources/native/memories/jni/windows-x86/: memories.jnilib  memories.jnilib.sha256sum
jni/src/main/resources/native/memories/jni/windows-x86-64/: memories.jnilib  memories.jnilib.sha256sum
jni/src/test/java/memories/jni/: MemoryAllocatorTest.java  MemoryTest.java  NegativeTest.java
spi/: pom.xml
spi/src/main/java/memories/spi/: File.java  MappedMemory.java  Memory.java  MemoryAllocator.java
spi/src/main/java/memories/spi/annotation/: Restricted.java
spi/src/main/java/memories/spi/exception/: MemoryAccessException.java  MemoryLeakException.java
spi/src/test/java/memories/spi/exaption/: MemoryAccessExceptionTest.java  MemoryLeakExceptionTest.java
(+16 files in other folders)
